--- a/app/src/main/res/layout/fragment_view_comments.xml
+++ b/app/src/main/res/layout/fragment_view_comments.xml
@@ -43,10 +43,10 @@
 
 
 
-        <ListView
+        <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/listView"></ListView>
+            android:id="@+id/listView"></android.support.v7.widget.RecyclerView>
 
     </RelativeLayout>
 
