--- a/app/src/main/res/layout/layout_comment.xml
+++ b/app/src/main/res/layout/layout_comment.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white">
 
@@ -31,7 +31,6 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="test.username"
                 android:layout_marginLeft="15dp"
                 android:textColor="@color/black"
                 android:textSize="18sp"
@@ -44,7 +43,6 @@
                 android:layout_marginLeft="15dp"
                 android:textColor="@color/black"
                 android:textSize="18sp"
-                android:text="this is a comment"
                 android:layout_below="@+id/comment_username"
                 android:id="@+id/comment"
                 />
@@ -54,7 +52,6 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/grey"
                 android:textSize="15sp"
-                android:text="3d"
                 android:id="@+id/comment_time_posted"
                 android:layout_marginLeft="15dp"
                 android:layout_below="@+id/comment"/>
