--- a/app/src/main/res/layout/layout_view_post.xml
+++ b/app/src/main/res/layout/layout_view_post.xml
@@ -31,21 +31,22 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="20sp"
-                    android:text="sample.text"
                     android:layout_toRightOf="@+id/profile_photo"
                     android:layout_marginLeft="10dp"
                     android:layout_centerVertical="true"
                     android:id="@+id/username"
                     android:textColor="@color/black"/>
 
-                <ImageView
-                    android:id="@+id/ivEllipses"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
+                <Button
+                    android:id="@+id/respondButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:text="RESPOND"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:layout_marginRight="20dp"
-                    android:src="@drawable/ic_ellipses" />
+                    style="@style/com_facebook_button"
+                    android:layout_marginRight="10dp"
+                    android:visibility="gone"/>
 
             </RelativeLayout>
 
@@ -110,18 +111,39 @@
                 android:layout_marginBottom="50dp"
                 android:background="@color/white">
 
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/rellayout4">
+                    <ImageView
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:src="@drawable/ic_map_marker"
+                        android:id="@+id/map_marker"
+                        android:layout_centerVertical="true"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="14sp"
+                        android:id="@+id/address"
+                        android:layout_marginBottom="5dp"
+                        android:layout_marginLeft="5dp"
+                        android:layout_toRightOf="@+id/map_marker"
+                        android:layout_centerVertical="true"/>
+                </RelativeLayout>
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Liked by test, test1, test2 and 100 others"
                     android:textColor="@color/black"
                     android:textSize="18sp"
+                    android:layout_below="@+id/rellayout4"
                     android:id="@+id/image_likes"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="sample.text hell world #hello"
                     android:textColor="@color/black"
                     android:textSize="18sp"
                     android:id="@+id/image_caption"
@@ -132,7 +154,6 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Test View comments"
                     android:textColor="@color/grey"
                     android:textSize="18sp"
                     android:id="@+id/image_comments_Link"
@@ -142,7 +163,6 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="3 days ago"
                     android:textColor="@color/grey"
                     android:textSize="18sp"
                     android:id="@+id/image_time_posted"
