--- a/app/src/main/res/drawable-xhdpi/comment_box_border.xml
+++ b/app/src/main/res/drawable-xhdpi/comment_box_border.xml
@@ -3,20 +3,20 @@
     android:shape="rectangle">
     <stroke
         android:width="2dp"
-        android:color="@color/light_grey" />
+        android:color="@color/comment_box_color" />
 
     <solid
-        android:color="@color/white"
-        />   <e></e>
+        android:color="@color/comment_box_color"
+        />
 
     // Reduce the corner radius value
     <corners android:radius="20dp" />
 
     <!--<padding-->
-    <!--android:left="20dp"-->
-    <!--android:top="10dp"-->
-    <!--android:right="20dp"-->
-    <!--android:bottom="10dp"    >-->
+        <!--android:left="20dp"-->
+        <!--android:top="10dp"-->
+        <!--android:right="20dp"-->
+        <!--android:bottom="10dp"    >-->
     <!--</padding>-->
 
 </shape>
