--- a/app/src/main/res/drawable/white_gray_border_top.xml
+++ b/app/src/main/res/drawable/white_gray_border_top.xml
@@ -14,10 +14,10 @@
             android:shape="rectangle">
             <stroke
                 android:width="1dp"
-                android:color="@color/grey" />
+                android:color="@color/comment_box_color" />
 
             <solid
-                android:color="@color/white"/>
+                android:color="@color/comment_box_color"/>
 
         </shape>
     </item>
