--- a/app/src/main/res/layout/layout_comment.xml
+++ b/app/src/main/res/layout/layout_comment.xml
@@ -9,10 +9,9 @@
         android:layout_width="45dp"
         android:layout_height="45dp"
         android:id="@+id/comment_profile_image"
-        android:layout_marginTop="15dp"
-        android:layout_marginLeft="20dp"
-        app:civ_border_color="@color/black"
-        app:civ_border_width="0.5dp"/>
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="10dp"
+        app:civ_border_width="2dp"/>
     
     <RelativeLayout
         android:layout_width="match_parent"
@@ -20,29 +19,34 @@
         android:id="@+id/rellayout1"
         android:layout_toRightOf="@+id/comment_profile_image"
         android:layout_marginTop="15dp"
-        android:background="@drawable/grey_border_bottom">
+        android:layout_marginStart="10dp">
 
         <RelativeLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="60dp"
-            android:layout_marginBottom="20dp">
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/comment_box_border">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:textColor="@color/black"
-                android:textSize="18sp"
+                android:textSize="14sp"
                 android:textStyle="bold"
+                android:fontFamily="sans-serif-condensed"
                 android:id="@+id/comment_username"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:textColor="@color/black"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 android:layout_below="@+id/comment_username"
                 android:id="@+id/comment"
                 />
@@ -51,9 +55,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/grey"
-                android:textSize="15sp"
+                android:textSize="14sp"
                 android:id="@+id/comment_time_posted"
-                android:layout_marginLeft="15dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="10dp"
                 android:layout_below="@+id/comment"/>
 
             <TextView
