--- a/app/src/main/res/layout/layout_view_post.xml
+++ b/app/src/main/res/layout/layout_view_post.xml
@@ -10,7 +10,8 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="@color/white">
             
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -18,35 +19,52 @@
                 android:id="@+id/rellayout1">
 
                 <de.hdodenhof.circleimageview.CircleImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
                     android:id="@+id/profile_photo"
                     app:civ_border_color="@color/black"
                     app:civ_border_width="0.5dp"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginLeft="25dp"
+                    android:layout_marginLeft="15dp"
                     android:layout_centerVertical="true"/>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="20sp"
-                    android:layout_toRightOf="@+id/profile_photo"
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
                     android:layout_marginLeft="10dp"
-                    android:layout_centerVertical="true"
-                    android:id="@+id/username"
-                    android:textColor="@color/black"/>
+                    android:layout_toRightOf="@+id/profile_photo">
 
-                <Button
-                    android:id="@+id/respondButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="40dp"
-                    android:text="RESPOND"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    style="@style/com_facebook_button"
-                    android:layout_marginRight="10dp"
-                    android:visibility="gone"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="14sp"
+                        android:text="Profile Name"
+                        android:textStyle="bold"
+                        android:id="@+id/username"
+                        android:textColor="@color/black"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="12sp"
+                        android:text="Location"
+                        android:id="@+id/address"
+                        android:layout_below="@+id/username"
+                        android:layout_centerVertical="true"/>
+
+                    <Button
+                        android:id="@+id/respondButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="40dp"
+                        android:text="RESPOND"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        style="@style/com_facebook_button"
+                        android:layout_marginRight="10dp"
+                        android:visibility="gone"/>
+
+                </RelativeLayout>
 
             </RelativeLayout>
 
@@ -59,20 +77,20 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="40dp"
                 android:id="@+id/rellayout2"
                 android:layout_below="@+id/post_image"
                 android:background="@color/white">
                 
                 <RelativeLayout
-                    android:layout_width="60dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:background="@color/white"
                     android:id="@+id/heart_layout">
 
                     <ImageView
-                        android:layout_width="35dp"
-                        android:layout_height="35dp"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
                         android:id="@+id/image_heart_red"
                         android:layout_centerInParent="true"
                         android:layout_marginLeft="20dp"
@@ -80,8 +98,8 @@
                         android:visibility="invisible"/>
 
                     <ImageView
-                        android:layout_width="35dp"
-                        android:layout_height="35dp"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
                         android:id="@+id/image_heart"
                         android:layout_centerInParent="true"
                         android:layout_marginLeft="20dp"
@@ -91,11 +109,10 @@
                 </RelativeLayout>
 
                 <ImageView
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
                     android:id="@+id/speech_bubble"
                     android:layout_toRightOf="@+id/heart_layout"
-                    android:layout_marginLeft="10dp"
                     android:src="@drawable/ic_speech_bubble"
                     android:layout_centerVertical="true"
                     android:visibility="visible"/>
@@ -107,67 +124,48 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/rellayout2"
                 android:id="@+id/rellayout3"
-                android:padding="20dp"
-                android:layout_marginBottom="50dp"
-                android:background="@color/white">
-
-                <RelativeLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/rellayout4">
-                    <ImageView
-                        android:layout_width="20dp"
-                        android:layout_height="20dp"
-                        android:src="@drawable/ic_map_marker"
-                        android:id="@+id/map_marker"
-                        android:layout_centerVertical="true"/>
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="14sp"
-                        android:id="@+id/address"
-                        android:layout_marginBottom="5dp"
-                        android:layout_marginLeft="5dp"
-                        android:layout_toRightOf="@+id/map_marker"
-                        android:layout_centerVertical="true"/>
-                </RelativeLayout>
+                android:background="@color/white"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="5dp">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/black"
-                    android:textSize="18sp"
-                    android:layout_below="@+id/rellayout4"
+                    android:textSize="14sp"
+                    android:text="Liked by"
                     android:id="@+id/image_likes"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/black"
-                    android:textSize="18sp"
+                    android:textSize="16sp"
+                    android:text="Caption"
                     android:id="@+id/image_caption"
                     android:layout_below="@+id/image_likes"
-                    android:layout_marginTop="15dp"/>
+                    android:layout_marginTop="10dp"/>
 
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/grey"
-                    android:textSize="18sp"
+                    android:textSize="14sp"
+                    android:text="Comments"
                     android:id="@+id/image_comments_Link"
                     android:layout_below="@+id/image_caption"
-                    android:layout_marginTop="15dp"/>
+                    android:layout_marginTop="10dp"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/grey"
-                    android:textSize="18sp"
+                    android:textSize="14sp"
+                    android:text="Time Posted"
                     android:id="@+id/image_time_posted"
                     android:layout_below="@+id/image_comments_Link"
-                    android:layout_marginTop="15dp"/>
+                    android:layout_marginTop="10dp"/>
 
             </RelativeLayout>
             
