--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,6 @@
     <color name="pearl_white">#eeebd9</color>
     <color name="emercifycolor">#55bdca</color>
     <color name="light_grey">#EAECEE</color>
-    <color name ="notseen">#d8f0f3</color>
+    <color name ="notseen">#ecf7f9</color>
+    <color name ="comment_box_color">#f2f2f2</color>
 </resources>
