--- a/app/src/main/res/layout/layout_center_profile.xml
+++ b/app/src/main/res/layout/layout_center_profile.xml
@@ -103,7 +103,7 @@
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:id="@+id/extratext"
+                            android:id="@+id/legitimacy"
                             android:textColor="@color/black"
                             android:textSize="14sp"
                             android:text="Extra Text"
