--- a/app/src/main/res/layout/layout_center_view_profile.xml
+++ b/app/src/main/res/layout/layout_center_view_profile.xml
@@ -68,7 +68,6 @@
                     android:id="@+id/display_name"
                     android:textColor="@color/black"
                     android:textStyle="bold"
-                    android:text="Nicail"
                     android:textSize="16sp"
                     android:fontFamily="sans-serif-condensed"/>
 
@@ -77,7 +76,6 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/description"
                     android:textColor="@color/black"
-                    android:text="Sample Description"
                     android:textSize="16sp"
                     android:layout_marginTop="5dp"/>
 
@@ -86,9 +84,18 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/website"
                     android:textColor="@color/link_blue"
-                    android:text="https://sample.website.com "
                     android:textSize="16sp"
                     android:layout_marginTop="5dp"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/legitimacy"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    android:text="Extra Text"
+                    android:layout_marginTop="5dp"
+                    android:visibility="gone"/>
 
             </LinearLayout>
 
