--- a/app/src/main/res/layout/fragment_signout.xml
+++ b/app/src/main/res/layout/fragment_signout.xml
@@ -43,7 +43,7 @@
             android:textSize="14sp"
             android:id="@+id/btnConfirmSignout"
             android:layout_below="@+id/tvConfirmSignout"
-            android:background="@drawable/gradient_bg"
+            android:background="@drawable/rounded_border_blue"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"/>
 
