--- a/app/src/main/res/layout/layout_respondent_recycleritem.xml
+++ b/app/src/main/res/layout/layout_respondent_recycleritem.xml
@@ -28,11 +28,11 @@
             android:textColor="@color/black"/>
 
         <TextView
-            android:id="@+id/notif_message"
+            android:id="@+id/status"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/username"
-            android:text="Message"
+            android:text="Status"
             android:textSize="10sp"
             android:textColor="@color/black"
             android:layout_marginTop="3dp"/>
