--- a/app/src/main/res/layout/layout_view_post.xml
+++ b/app/src/main/res/layout/layout_view_post.xml
@@ -182,7 +182,8 @@
                     android:src="@mipmap/ic_respondents"
                     android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
-                    android:background="@drawable/shadow_border"/>
+                    android:background="@drawable/shadow_border"
+                    android:visibility="gone"/>
 
             </RelativeLayout>
 
