--- a/app/src/main/res/layout/snippet_post_toolbar.xml
+++ b/app/src/main/res/layout/snippet_post_toolbar.xml
@@ -44,7 +44,7 @@
                         android:id="@+id/legitcount"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text=""
+                        android:text="0"
                         android:textColor="@color/white"
                         android:textSize="16sp"
                         android:textStyle="bold"
@@ -59,7 +59,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
-                        android:text=""
+                        android:text="0"
                         android:textColor="@color/white"
                         android:textSize="16sp"
                         android:textStyle="bold"
