--- a/app/src/main/res/layout/dialog_respondents.xml
+++ b/app/src/main/res/layout/dialog_respondents.xml
@@ -2,7 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="350dp">
 
 
     <RelativeLayout
@@ -53,9 +53,18 @@
                     android:layout_height="match_parent"
                     android:layout_below="@+id/kindofpost">
 
+                    <TextView
+                        android:id="@+id/noresponders"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="No Responders"
+                        android:textSize="24sp"
+                        android:layout_centerInParent="true"
+                        android:visibility="gone"/>
+
                     <android.support.v7.widget.RecyclerView
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:id="@+id/listViewrespondents">
 
                     </android.support.v7.widget.RecyclerView>
@@ -71,7 +80,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="10dp"
-            android:layout_below="@+id/resscroll">
+            android:layout_alignParentBottom="true">
 
             <Button
                 android:id="@+id/closebtn"
